added firebase deploy

--- a/angular.json
+++ b/angular.json
@@ -149,8 +149,13 @@
               }
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "eoriol-v8"
 }
