--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "build": "ng build",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "build:client-and-server-bundles": "ng build --prod && ng run eoriol-v8:server:production --bundleDependencies all",
-    "build": "ng build --prod && npm run copy:hosting && npm run build:ssr && npm run build:functions",
-    "copy:hosting": "cp -r ./dist/browser/* ./public && rm ./public/index.html",
+    "build:firebase": "npm run build:ssr && npm run build:functions && npm run rm:public-index",
+    "serve:firebase": "firebase serve",
+    "rm:public-index": "rm ./dist/browser/index.html",
     "build:functions": "npm run --prefix functions build"
   },
   "private": true,
