firebase functions working locally

--- a/angular.json
+++ b/angular.json
@@ -146,7 +146,8 @@
               "optimization": {
                 "scripts": false,
                 "styles": true
-              }
+              },
+              "bundleDependencies": "all"
             }
           }
         },
